everything but the tests